--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "vite": "^3.0.7"
   },
   "dependencies": {
+    "svelte-codemirror-editor": "^1.4.1",
     "svelte-spa-router": "^4.0.1"
   }
 }
